<resources>
    <string name="app_name">AndroidDevelopment</string>
    <string name="email_hint_for_text_input">Email</string>
    <string name="password_hint_for_text_input">Password</string>
    <string name="sign_in_button_text">Log in</string>
    <string name="text_redirection_to_register_page">Not Register?</string>
    <string name="description_for_statistic_icon">statistic icon</string>
    <string name="title_of_back_button">Back arrow</string>
    <string name="confirm_password_hint_for_text_input">Confirm Password</string>
    <string name="name_hint_for_text_input">Name</string>
    <string name="text_redirection_to_sign_in_page">Already have account?</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="Sign_in_page_title">Sign in</string>
    <string name="title_of_sign_up_page">Sign up</string>
    <string name="title_of_welcome_page">Welcome</string>
    <string name="title_main_page">Main</string>
    <string name="main_page_text">Hello its app analizum, to enter in app? please authorise first</string>
    <string name="welcome_page_text">Hello from app</string>
    <string name="image_beer_description">beer photo</string>
    <string name="detail_item_back_button_text">Go Back</string>
    <string name="item_details_page_title">Item Details</string>
    <string name="profile_settings_title">My profile</string>
    <string-array name="language_array">
        <item>English</item>
        <item>Ukrainian</item>
        <item>Polish</item>
    </string-array>
</resources>


