<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background_for_authentication"
    tools:context=".SignUpActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sign_up_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/second_app_background"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logo">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_arrow_back_36"
            tools:layout_editor_absoluteX="16dp"
            android:background="@null"
            tools:layout_editor_absoluteY="16dp"
            android:contentDescription="@string/title_of_back_button" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign in"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="22dp" />


    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/description_for_statistic_icon"
        android:src="@drawable/statistic_icon_gradient"
        android:layout_margin="30dp"

        app:layout_constraintBottom_toTopOf="@id/name_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_toolbar"/>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/name_layout"

        style="@style/AppInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_of_input_layout"
        android:hint="@string/name_hint_for_text_input"

        app:layout_constraintBottom_toTopOf="@id/email_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/grey_c7c7c7"
            app:backgroundTint="@color/grey_c7c7c7" />
    </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/email_layout"

        style="@style/AppInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_of_input_layout"
        android:hint="@string/email_hint_for_text_input"

        app:layout_constraintBottom_toTopOf="@id/password_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/grey_c7c7c7"
            app:backgroundTint="@color/grey_c7c7c7" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/password_layout"

        style="@style/AppInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_of_input_layout"
        android:hint="@string/password_hint_for_text_input"

        app:layout_constraintBottom_toTopOf="@id/confirm_password_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/grey_c7c7c7"
            app:backgroundTint="@color/grey_c7c7c7" />
    </com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.textfield.TextInputLayout

        android:id="@+id/confirm_password_layout"

        style="@style/AppInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_of_input_layout"
        android:hint="@string/confirm_password_hint_for_text_input"

        app:layout_constraintBottom_toTopOf="@id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/grey_c7c7c7"
            app:backgroundTint="@color/grey_c7c7c7" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_in_button"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/sign_in_button_text"

        android:textAllCaps="true"
        app:backgroundTint="@null"

        app:layout_constraintBottom_toTopOf="@+id/register_reference"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_layout" />

    <TextView
        android:id="@+id/register_reference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_redirection_to_register_page"
        android:textColor="@color/grey_c7c7c7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button" />


</androidx.constraintlayout.widget.ConstraintLayout>