<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background_for_authentication">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            style="@style/AppToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:title="@string/title_main_page"
            app:titleTextAppearance="@style/ToolbarTitle"
            app:titleTextColor="@color/grey_c7c7c7" />

    </com.google.android.material.appbar.AppBarLayout>


    <Button
        android:id="@+id/sign_in_button"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin_of_button_in_authentication_pages"
        android:layout_marginTop="@dimen/margin_at_top_of_button_in_auth_page"
        android:layout_marginBottom="@dimen/distance_between_button_and_text_view_in_auth_page"
        android:text="@string/sign_in_button_text"
        android:textAllCaps="true"
        android:textSize="@dimen/button_font_size"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/sign_up_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/sign_up_button"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin_of_button_in_authentication_pages"

        android:layout_marginTop="@dimen/margin_at_top_of_button_in_auth_page"
        android:layout_marginBottom="@dimen/distance_between_button_and_text_view_in_auth_page"
        android:text="@string/sign_up_button_text"
        android:textAllCaps="true"
        android:textSize="@dimen/button_font_size"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="@dimen/horizontal_margin__text_view_in_main_page"
        android:text="@string/main_page_text"
        android:textAlignment="center"
        android:textColor="@color/grey_c7c7c7"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>